Start reorganization of the source files. Project is BROKEN for now.

--- a/README
+++ b/README
@@ -33,17 +33,17 @@ transfer size option from RFC2349.
 
 For help on how to use pTFTPd, type:
 
-  ./ptftpd.py --help
+  ./bin/ptftpd.py --help
 
 The port used can be changed using the -p option. The root path is given
 as a simple argument. For example, to serve /var/lib/tftp on port 6969:
 
-  ./ptftpd.py -p 6969 /var/lib/tftp
+  ./bin/ptftpd.py -p 6969 /var/lib/tftp
 
 The TFTP client is an interactive client, just launch it and type 'help'
 to see the available commands:
 
-  ./tftp.py
+  ./bin/ptftp.py
   tftp> help
   ...
 
@@ -56,12 +56,12 @@ files, and the PXE boot filename. It will automatically start a TFTP
 server and a DHCP server to serve hosts on the given interface. See
 --help for more details:
 
-  ./pxed.py --help
+  ./bin/pxed.py --help
 
 Mechanics for using pxed.py with the BOOTP server are not yet in place,
 but such a solution can easily be constructed manually by starting the
 BOOTP server and the TFTP server manually:
 
-  ./bootpd.py <interface> <PXE boot file> &
-  ./ptftpd.py
+  ./bin/bootpd.py <interface> <PXE boot file> &
+  ./bin/ptftpd.py
 
