Fix MacS's email address in the AUTHORS file, plus some additional info on PYTHONPATH in the README file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,7 +7,7 @@ The pTFTPd tool suite is written and maintained by Maxime Petazzoni
   David Anderson      <dave@natulte.net>
     DHCP and PXE servers.
 
-  Maxime Ripard       <macs@anandra.org>
+  Maxime Ripard       <maxime.ripard@anandra.org>
     BOOTPd, based on David Anderson's work on DHCPd.
 
 Thanks
