--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,11 @@
-ptftpd (0.1svn20090710~ppa1) unstable; urgency=low
+ptftpd (0.1-2) unstable; urgency=low
 
-  * upstream changes (code reorg)
+  * Upstream changes (code reorg)
+  * Debian packaging fixes
 
- -- Marc Poulhiès <dkm@kataplop.net>  Fri, 10 Jul 2009 17:36:22 +0200
+ -- Maxime Petazzoni <maxime.petazzoni@bulix.org>  Fri, 10 Jul 2009 19:11:17 +0200
 
-ptftpd (0.1-1svn10072009~ppa2) unstable; urgency=low
-
-  * change section from utils to net
-
- -- Marc Poulhiès <dkm@kataplop.net>  Fri, 10 Jul 2009 08:05:20 +0200
-
-ptftpd (0.1-1svn10072009~ppa1) unstable; urgency=low
+ptftpd (0.1-1) unstable; urgency=low
 
   * Initial release
 
