--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ptftpd (0.1-3) unstable; urgency=low
+
+  * Use two distinct packages, one for the python module and one for the CLI
+    tools.
+
+ -- Maxime Petazzoni <maxime.petazzoni@bulix.org>  Fri, 10 Jul 2009 23:38:52 +0200
+
 ptftpd (0.1-2) unstable; urgency=low
 
   * Upstream changes (code reorg)
