--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ptftpd (0.2-1) unstable; urgency=low
+
+  * Remove the .py extension from the Python executables.
+  * New upstream version (0.2), including man pages.
+
+ -- Maxime Petazzoni <maxime.petazzoni@bulix.org>  Fri, 16 Jul 2009 11:45:49 +0200
+
 ptftpd (0.1-3) unstable; urgency=low
 
   * Use two distinct packages, one for the python module and one for the CLI
