Add remaining man pages.

--- a/doc/ptftpd.1
+++ b/doc/ptftpd.1
@@ -44,12 +44,10 @@ Set the port
 listens for TFTP requests on.
 .TP
 \-v, \-\-verbose
-Be verbose.
-Output information messages.
+Be verbose. Output information messages.
 .TP
 \-D, \-\-debug
-Be even more verbose.
-Output debugging information.
+Be even more verbose. Output debugging information.
 .SH SEE ALSO
 ptftp(1)
 .SH AUTHORS
