Implement packet number wraparound
This commit integrates a feature contributed by Maxime Hadjinlian to support
the transfer of files of arbitrary size by looping the DATA packet number. This
is a commonly implemented feature in TFTP servers, known as packet number
wraparound.

When the packet number reaches the maximum allowed by the TFTP protocol, 2^16-1
(65535), the packet number is reset to 1 to allow the transfer to continue. The
target client must of course support the feature as well.

In both pTFTP and pTFTPd, this behavior is disabled when the strict RFC1350
mode of operation is used (--rfc1350).

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,10 +10,13 @@ The pTFTPd tool suite is written and maintained by Maxime Petazzoni
   Maxime Ripard       <maxime.ripard@anandra.org>
     BOOTPd, based on David Anderson's work on DHCPd.
 
+  Maxime Hadjinglian  <maxime.hadjinlian@gmail.com>
+    Packet number wraparound feature for pTFTP and pTFTPd.
+
 Thanks
 ^^^^^^
 
-Thanks to David Anderson, Maxime Ripard, Thomas Petazzoni and Benjamin
-Collet for testing and using the pTFTPd utilities!
+Thanks to David Anderson, Maxime Ripard, Thomas Petazzoni, Benjamin Collet and
+Maxime Hadjinglian for testing and using the pTFTPd utilities!
 
 Huge thanks to Marc Poulhiès for his help on the Debian packaging of pTFTPd.
