Use a local temporary file when downloading with the client
This avoid loosing the content of an already existing local file when
overwriting and when the transfer fails or is interrupted.

Contributed by Maxime Hadjinlian <maxime.hadjinlian@gmail.com>.

--- a/doc/ptftp.1
+++ b/doc/ptftp.1
@@ -90,6 +90,10 @@ Display or change the transfer block size to
 Get
 .B filename
 from the server. Use "-f" to overwrite a potentially existing local file.
+The received data is written into a temporary file that is only moved
+to a local file where ptftp is executed if the transfer completed
+successfully, thus avoiding loosing the content of a previous file of
+the same name if the transfer fails or is interrupted.
 .TP
 .RB p, " " put " filename"
 Push
